# sportident-rs

./: Cargo.toml  README.md
.github/workflows/: checks.yml  publish.yml  rust.yml
examples/: auto_detect.rs  card_owner_data.rs  card_readout.rs  read_card.rs
src/: error.rs  lib.rs  reader.rs
src/protocol/: constants.rs  crc.rs  decoder.rs  encoder.rs  mod.rs  punch.rs  readout.rs
src/protocol/card_blocks/: mod.rs  owner_data.rs  punch.rs  readout.rs
src/protocol/card_blocks/tests/: mod.rs  pcard.rs  si10.rs  si8.rs  siac.rs
src/protocol/commands/: beep.rs  mod.rs  read_card_data.rs  set_master_slave.rs  system_configuration.rs
src/protocol/responses/: card.rs  card_punch.rs  mod.rs
