[package]
name = "sportident"
version = "0.0.8"
edition = "2021"
description = "Interact with Sportident in rust with ease."
license = "Apache-2.0"
repository = "https://github.com/yogevm15/sportident-rs"
readme = "README.md"
keywords = ["sportident", "orienteering"]
categories = ["hardware-support"]
include = ["/src", "LICENSE", "/examples", "README.md"]

[dependencies]
bitflags = "2"
chrono = "0.4.35"
enum_dispatch = "0.3.12"
futures = "0.3.30"
serialport = "4.2.0"
strum_macros = "0.26"
thiserror = "1.0.58"
tokio-serial = "5.0.5"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
hex = "0.4"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
